maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:8: error: reassignment to val
			xBaggle = i
                                ^JediEscaper:9: error: reassignment to val
			yBaggle = j
                                ^